Fix: Charts block needs horizontal scroll bar
git-svn-id: svn://svn.webtrees.net/trunk/phpGedView@3015 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/themes/cloudy/style.css
+++ b/themes/cloudy/style.css
@@ -57,6 +57,7 @@ ul {
 }
 
 .blockcontent {
+	overflow: auto;
 	margin-left: auto;
 	border: 1pt solid #999;
 	margin-right: 5px;
