--- a/themes/minimal/style.css
+++ b/themes/minimal/style.css
@@ -668,6 +668,7 @@ table.center{
 }
 
 .block {
+	overflow: auto;
 	background-color: white;
 	color: black;
 	border: solid black 2px;
